src/objects/SocialMediaSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FacebookAppId__c</fullName>
        <label>Facebook App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FbRedirectURL__c</fullName>
        <label>Facebook Redirect URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GoogleClientId__c</fullName>
        <label>Google Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleClientSecret__c</fullName>
        <label>Google Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleRedirectURL__c</fullName>
        <label>Google Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Social Media Settings</label>
</CustomObject>